--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body{
 /* Header */
 
 #header{
-    background: url(./images/hero\ 1.jpg) top/cover no-repeat;
+    background: url(./images/hero\ 1.jpeg) top/cover no-repeat;
     width: 100vw;
     height: 100vh;
    position: relative;
@@ -206,6 +206,14 @@ body{
         margin: 0;
   }
 
+  }
+
+  @media only screen and (max-width: 500px){
+
+    #header {
+        width: 400px;
+        height: 60vh;
+   }
   }
 
  
