--- a/style.css
+++ b/style.css
@@ -55,9 +55,12 @@ body{
 
 #header{
     background: url(./images/hero\ 1.jpeg) top/cover no-repeat;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
-   position: relative;
+    background-position: center center fixed;
+    position: relative;
+    object-fit: cover;
+    
    
 }
 .carousel-inner h1{
@@ -162,58 +165,63 @@ body{
 
 /* MEDIA QUERRY */
 
-  @media only screen and (max-width: 900px) {
+  @media screen and (max-width: 800px) {
     * {
         box-sizing: border-box;
         margin: 0;
         padding: 0;
     }
 
-   #header {
-        width: 100vw;
-        height: 60vh;
-   }
+  /* #header {
+            width: 100%;
+            height: 23vh;
+       } */
+
+   
         
 
   .first-box {
         display: block;
-        flex-direction: row;
+        flex-direction: column;
         margin-top: 10px;
         padding: 0;
     }
 
     .image-1 {
-        width: 100vw;
+        width: 100%;
         height: 60vh;
-        margin-top: auto;
+        margin-top: auto; 
     }
    
   .image-1 img{
-        width: 100vw;
+
+      width: 100%;
+       
         height: 60vh;
-        margin: 0;
+        margin: 0; 
   }
 
 .image-2 img{
-        width: 100vw;
-        height: 60vh;
-        margin: 0;
+    width: 100%;
+    height: 60vh;
+    margin: 0; 
 }
 
   .image-3 img{
-        width: 100vw;
+    
+        width: 100%;
         height: 60vh;
-        margin: 0;
+        margin: 0; 
   }
 
   }
 
-  @media only screen and (max-width: 500px){
+  @media only screen and (min-width: 800px){
 
-    #header {
-        width: 400px;
-        height: 60vh;
-   }
+    /* #header {
+        width: 50vw;
+        height: 50vh;
+   } */
   }
 
  
